✨ GET /homes/{id}/sensors Done
