# MyClimate/app/Http/Controllers/SensorController.php
@@ -6,6 +6,9 @@ use App\Http\Requests\CreateSensorRequest;
 use App\Http\Resources\SensorResource;
 use App\Services\HomeService;
 use App\Services\SensorService;
+use Illuminate\Http\Request;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 use Illuminate\Support\Facades\Auth;
 
 class SensorController extends Controller
@@ -18,6 +21,13 @@ class SensorController extends Controller
         $this->sensorService = $sensorService;
     }
 
+    /**
+     * Create a sensor
+     * @url POST /homes/{id}/sensors
+     * @param CreateSensorRequest $request
+     * @param int $id
+     * @return JsonResponse
+     */
     public function store(CreateSensorRequest $request, int $id){
         // User is authenticated --> Checked by sanctum middleware
         $user = Auth::user();
@@ -35,6 +45,32 @@ class SensorController extends Controller
         $sensor = $this->sensorService->createSensor($validatedData);
 
         return response()->json(['data' => new SensorResource($sensor)], 201);
+
+    }
+
+
+    /**
+     * Get all sensors of a house
+     * @url POST /homes/{id}/sensors
+     * @param int $id
+     * @return AnonymousResourceCollection
+     */
+    public function index(Request $request, int $id): AnonymousResourceCollection
+    {
+        // User is authenticated --> Checked by sanctum middleware
+        $user = Auth::user();
+
+        $home = $this->homeService->findByIdOrFail($id); // If not found -> 404
+
+        // Return 403 if the user is not the owner of the house
+        abort_if($home->user_id !== $user->id, 403);
+
+
+        // Pagination stuff
+        $page = $request->get('page') !== null ? $request->get('page') : 1;
+        $per_page = $request->get('perPage') !== null ? $request->get('perPage') : 10;
+
+        return SensorResource::collection($home->sensors()->paginate($per_page, ['*'], 'page', $page));
 
     }
 }
